--- a/tests/integration/targets/podman_container/tasks/main.yml
+++ b/tests/integration/targets/podman_container/tasks/main.yml
@@ -1200,6 +1200,9 @@
         quadlet_dir: /tmp
         command: sleep 1d
         recreate: true
+        group_add:
+          - admin
+          - users
         etc_hosts:
           host1: 127.0.0.1
           host2: 127.0.0.1
@@ -1273,6 +1276,8 @@
         - "PodmanArgs=--add-host host2:127.0.0.1"
         - "Label=somelabel=labelvalue"
         - "WantedBy=default.target"
+        - "GroupAdd=admin"
+        - "GroupAdd=users"
       loop_control:
         label: "{{ item }}"
 
@@ -1293,6 +1298,9 @@
         quadlet_dir: /tmp
         command: sleep 1d
         recreate: true
+        group_add:
+          - admin
+          - users
         etc_hosts:
           host1: 127.0.0.1
           host2: 127.0.0.1
@@ -1346,6 +1354,9 @@
         quadlet_dir: /tmp
         command: sleep 1d
         recreate: true
+        group_add:
+          - admin
+          - users
         etc_hosts:
           host1: 127.0.0.45
           host2: 127.0.0.1
