Add missing parameters for podman container quadlet (#847)
* Revert "Add group_add parameter for podman quadlet (#827)"

This reverts commit 4f24eced99edfa0ec493cc1e5e356c23ccebeab3.

Signed-off-by: Thomas Preindl <tompre@users.noreply.github.com>

* Add 'group_add' to 'GroupAdd' parameter mapping for podman container quadlet

Signed-off-by: Thomas Preindl <tompre@users.noreply.github.com>

* Add 'cgroups' to 'CgroupsMode' parameter mapping for podman container quadlet

Signed-off-by: Thomas Preindl <tompre@users.noreply.github.com>

* Fix 'etc_hosts' to 'AddHost' parameter mapping for podman container quadlet

Signed-off-by: Thomas Preindl <tompre@users.noreply.github.com>

* Fix 'network_aliases' to 'NetworkAlias' parameter mapping for podman container quadlet

Signed-off-by: Thomas Preindl <tompre@users.noreply.github.com>

* Fix 'stop_signal' to 'StopSignal' parameter mapping for podman container quadlet

Signed-off-by: Thomas Preindl <tompre@users.noreply.github.com>

* Add 'cpus' parameter mapping for podman container quadlet

Signed-off-by: Thomas Preindl <tompre@users.noreply.github.com>

* Add 'platform' parameter mapping for podman container quadlet

Signed-off-by: Thomas Preindl <tompre@users.noreply.github.com>

* Add 'log_opt' to 'LogOpt' parameter mapping for podman container quadlet

Signed-off-by: Thomas Preindl <tompre@users.noreply.github.com>

---------

Signed-off-by: Thomas Preindl <tompre@users.noreply.github.com>

--- a/tests/integration/targets/podman_container/tasks/main.yml
+++ b/tests/integration/targets/podman_container/tasks/main.yml
@@ -1200,9 +1200,18 @@
         quadlet_dir: /tmp
         command: sleep 1d
         recreate: true
+        stop_signal: 9 #SIGKILL
+        group_add:
+          - admin
+          - users
         etc_hosts:
           host1: 127.0.0.1
           host2: 127.0.0.1
+        network_aliases:
+          - web
+          - db
+        cpus: 0.5
+        platform: linux/amd64
         annotation:
           this: "annotation_value"
         dns:
@@ -1224,8 +1233,13 @@
         label:
           somelabel: labelvalue
           otheralbe: othervalue
+        log_opt:
+          max_size: 10mb
+          path: /var/log/container/mycontainer.json
+          tag: TestTag
         volumes:
           - /tmp:/data
+        cgroups: no-conmon
         mounts:
           - type=devpts,destination=/dev/pts
         quadlet_options:
@@ -1264,15 +1278,26 @@
         - "Image=alpine:3.12"
         - "Exec=sleep 1d"
         - "Volume=/tmp:/data"
+        - "CgroupsMode=no-conmon"
         - "Mount=type=devpts,destination=/dev/pts"
         - "WorkingDir=/bin"
         - "Unmask=ALL"
         - "SecurityLabelFileType=usr_t"
         - "Environment=BOOL=False"
         - "PublishPort=9001:8000"
-        - "PodmanArgs=--add-host host2:127.0.0.1"
+        - "AddHost=host2:127.0.0.1"
         - "Label=somelabel=labelvalue"
         - "WantedBy=default.target"
+        - "GroupAdd=admin"
+        - "GroupAdd=users"
+        - "NetworkAlias=web"
+        - "NetworkAlias=db"
+        - "StopSignal=9"
+        - "PodmanArgs=--cpus 0.5"
+        - "PodmanArgs=--platform linux/amd64"
+        - "LogOpt=max-size=10mb"
+        - "LogOpt=path=/var/log/container/mycontainer.json"
+        - "LogOpt=tag=TestTag"
       loop_control:
         label: "{{ item }}"
 
@@ -1293,9 +1318,18 @@
         quadlet_dir: /tmp
         command: sleep 1d
         recreate: true
+        stop_signal: 9 #SIGKILL
+        group_add:
+          - admin
+          - users
         etc_hosts:
           host1: 127.0.0.1
           host2: 127.0.0.1
+        network_aliases:
+          - web
+          - db
+        cpus: 0.5
+        platform: linux/amd64
         annotation:
           this: "annotation_value"
         dns:
@@ -1317,8 +1351,13 @@
         label:
           somelabel: labelvalue
           otheralbe: othervalue
+        log_opt:
+          max_size: 10mb
+          path: /var/log/container/mycontainer.json
+          tag: TestTag
         volumes:
           - /tmp:/data
+        cgroups: no-conmon
         mounts:
           - type=devpts,destination=/dev/pts
         quadlet_options:
@@ -1346,9 +1385,18 @@
         quadlet_dir: /tmp
         command: sleep 1d
         recreate: true
+        stop_signal: 9 #SIGKILL
+        group_add:
+          - admin
+          - users
         etc_hosts:
           host1: 127.0.0.45
           host2: 127.0.0.1
+        network_aliases:
+          - web
+          - db
+        cpus: 0.5
+        platform: linux/amd64
         annotation:
           this: "annotation_value"
         dns:
@@ -1370,8 +1418,13 @@
         label:
           somelabel: labelvalue
           otheralbe: othervalue
+        log_opt:
+          max_size: 10mb
+          path: /var/log/container/mycontainer.json
+          tag: TestTag
         volumes:
           - /tmp:/data
+        cgroups: no-conmon
         mounts:
           - type=devpts,destination=/dev/pts
         quadlet_options:
