--- a/tests/integration/targets/podman_pod/tasks/main.yml
+++ b/tests/integration/targets/podman_pod/tasks/main.yml
@@ -989,16 +989,18 @@
         network: examplenet
         quadlet_dir: /tmp
         quadlet_filename: customfile
+        quadlet_file_mode: '0644'
 
     - name: Check if files exists
       stat:
         path: /tmp/customfile.pod
       register: quadlet_file_custom
 
-    - name: Fail if no file is present
+    - name: Fail if no file is present or wrong mode
       assert:
         that:
           - quadlet_file_custom.stat.exists
+          - quadlet_file_custom.stat.mode == '0644'
 
     - name: Create a Quadlet pod file
       containers.podman.podman_pod:
