--- a/.github/workflows/podman_image.yml
+++ b/.github/workflows/podman_image.yml
@@ -12,7 +12,7 @@ on:
       - 'plugins/module_utils/podman/quadlet.py'
       - 'tests/integration/targets/podman_image/**'
     branches:
-      - master
+      - main
   pull_request:
     paths:
       - '.github/workflows/podman_image.yml'
