--- a/.github/workflows/podman_secret_info.yml
+++ b/.github/workflows/podman_secret_info.yml
@@ -10,7 +10,7 @@ on:
       - 'plugins/modules/podman_secret.py'
       - 'plugins/modules/podman_secret_info.py'
     branches:
-      - master
+      - main
   pull_request:
     paths:
       - '.github/workflows/podman_secret_info.yml'
