--- a/tests/integration/targets/podman_image_info/tasks/main.yml
+++ b/tests/integration/targets/podman_image_info/tasks/main.yml
@@ -12,7 +12,7 @@
           - info_0.images | length == 0
 
     - name: Pull image
-      command: podman pull quay.io/coreos/etcd
+      command: podman pull quay.io/coreos/etcd:v3.5.19
 
     - name: Get info on all images
       containers.podman.podman_image_info:
@@ -25,7 +25,7 @@
     - name: Get info on specific image
       containers.podman.podman_image_info:
         executable: "{{ test_executable | default('podman') }}"
-        name: dnsmasq
+        name: quay.io/coreos/dnsmasq
       register: named_image_result
 
     - name: Check results
@@ -33,7 +33,7 @@
         that:
           - all_image_result.images | length > 0
           - named_image_result.images | length == 1
-          - "'dnsmasq' in named_image_result.images[0]['RepoTags'][0]"
+          - "'quay.io/coreos/dnsmasq' in named_image_result.images[0]['RepoTags'][0]"
 
     - name: Get info on single image that does not exist
       containers.podman.podman_image_info:
@@ -53,9 +53,9 @@
       containers.podman.podman_image_info:
         executable: "{{ test_executable | default('podman') }}"
         name:
-          - dnsmasq
+          - quay.io/coreos/dnsmasq
           - nope
-          - etcd
+          - quay.io/coreos/etcd:v3.5.19
       register: mixed_nonexistent
 
     - name: Ensure image info was returned when non-existent image info was requisted
@@ -64,3 +64,13 @@
           - single_nonexistent.images | length == 0
           - multiple_nonexistent.images | length == 0
           - mixed_nonexistent.images | length == 2
+
+  always:
+    - name: Remove images
+      containers.podman.podman_image:
+        executable: "{{ test_executable | default('podman') }}"
+        name: "{{ item }}"
+        state: absent
+      loop:
+        - quay.io/coreos/etcd:v3.5.19
+        - quay.io/coreos/dnsmasq
