add workflow for podman_system_info module
Signed-off-by: johnsonlien <johnsonlien95@gmail.com>

--- a/tests/integration/targets/podman_system_info/tasks/main.yml
+++ b/tests/integration/targets/podman_system_info/tasks/main.yml
@@ -1,3 +1,8 @@
 - name: Get Podman system info
   containers.podman.podman_system_info:
   register: podman_info
+
+- name: Check results
+  assert: 
+    that:
+      - podman_info.podman_system_info | length > 0
