add integration test to workflow
Signed-off-by: johnsonlien <johnsonlien95@gmail.com>

--- a/.github/workflows/podman_system_info.yml
+++ b/.github/workflows/podman_system_info.yml
@@ -8,6 +8,7 @@ on:
       - 'ci/run_containers_tests.sh'
       - 'ci/playbooks/containers/podman_system_info.yml'
       - 'plugins/modules/podman_system_info.py'
+      - 'tests/integration/targets/podman_system_info/**'
     branches:
       - main
   pull_request:
@@ -17,6 +18,7 @@ on:
       - 'ci/run_containers_tests.sh'
       - 'ci/playbooks/containers/podman_system_info.yml'
       - 'plugins/modules/podman_system_info.py'
+      - 'tests/integration/targets/podman_system_info/**'
   schedule:
     - cron: 4 0 * * *  # Run daily at 0:03 UTC
 
