--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = ansible-podman-collections.containers
 summary = Ansible collections for Podman
-description-file =
+description_file =
     README.md
 
 author = Sagi Shnaidman (@sshnaidm)
