--- a/tests/integration/targets/podman_volume_info/tasks/main.yml
+++ b/tests/integration/targets/podman_volume_info/tasks/main.yml
@@ -60,7 +60,7 @@
       assert:
         that:
           - "'volumes' in existing_volume"
-          - existing_volume.volumes
+          - existing_volume.volumes | length > 0
           - "existing_volume.volumes == podman_inspect_result"
   always:
 
